Setup the web server backend and install basic security so we don't get hacked instantly (#116)
* Setup cors and honeypot for basic security

* Change dockerfile to Python3.7.6

* Update prod images and try preinstall scikit dependencies

* Preadd scikitlearn and pandas dependencies

* Update changes

* Change base image for box

* Update pip in production build

* Update web scripts to also have linux scripts

* Update production security

* Update dockerfiles

* Add Session Domain

* Needs CSRF token on admin

* Update domains

* Add initial https protection

* Update letsencrypt script

* update images and HTTPS

* Server up, HTTPS working and CSRF token secured

* Update development docker image

* Update allowed hosts, final security

Co-authored-by: Martin Bruun Michaelsen <mbm@klostermarken24.dk>

--- a/docker-compose.web.yml
+++ b/docker-compose.web.yml
@@ -28,13 +28,22 @@ services:
       - 65432:5432
   nginx:
     build: ./nginx
+    restart: always
     volumes:
       - static_volume:/home/washee_web/web/staticfiles
       - media_volume:/home/washee_web/web/mediafiles
+      - ./nginx/certbot/conf:/etc/letsencrypt
+      - ./nginx/certbot/www:/var/www/certbot
     ports:
-      - 7999:80
+      - 80:80
+      - 443:443
     depends_on:
       - web
+  certbot:
+    image: certbot/certbot:latest
+    volumes:
+      - ./nginx/certbot/conf:/etc/letsencrypt
+      - ./nginx/certbot/www:/var/www/certbot
 
 volumes:
   postgres_data:
