--- a/.env.dev
+++ b/.env.dev
@@ -1,5 +1,7 @@
 DEBUG=1
 SECRET_KEY=NotSoSecretKeyForDevelopmentServer
+DJANGO_CSRF_COOKIE=0
+DJANGO_SESSION_COOKIE=0
 DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
 DJANGO_HOST_PORT=8000
 DJANGO_PORT=8000
