--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,13 +1,36 @@
-upstream washee_web {
+upstream www.emilbruun.dk {
     server web:8000;
 }
 
 server {
 
     listen 80;
+    listen [::]:80;
+
+    server_name www.emilbruun.dk:
+    server_tokens off;
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+    
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+server {
+    listen 443 default_server ssl http2;
+    listen [::]:443 ssl http2;
+
+    server_name www.emilbruun.dk;
+
+    ssl_certificate /etc/letsencrypt/live/www.emilbruun.dk/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/www.emilbruun.dk/privkey.pem;
 
     location / {
-        proxy_pass http://washee_web;
+        proxy_pass http://www.emilbruun.dk;
+        proxy_set_header X-Forwarded-Proto https;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
